--- a/docs/2.tech-landscape.md
+++ b/docs/2.tech-landscape.md
@@ -52,3 +52,5 @@ Every Typerepo project must adhere the following structure:
 - `docs` markdown files that need to be presented in the Typerepo Docs to educate the developer of the project.
 - `assets` any assets that don't belong to an app or package.
 - `schemas` generated folder with the JSON typescript definitions
+
+<!-- TODO: edit, then add overview.png to this page -->
