--- a/docs/1.about.md
+++ b/docs/1.about.md
@@ -4,9 +4,9 @@ Typerepo is a full stack typescript framework that lets you build apps super qui
 
 Curious? Clone our [repo](https://github.com/CodeFromAnywhere/typerepo), or read on...
 
-## Why Typerepo?
+# Why Typerepo?
 
-### The problem
+## The problem
 
 1. **JavaScript fatigue is real**. With new tools and frameworks popping up like mushrooms, it's hard to keep up. It's even harder to reuse your code between different projects because every project has a different stack.
 
@@ -14,10 +14,21 @@ Curious? Clone our [repo](https://github.com/CodeFromAnywhere/typerepo), or read
 
 3. **Maintaining Quality Software is hard**. Lots of projects fail or become increasingly inefficient due to technical debt building up once the initial developers leave. Often, bad or no documentation makes it very hard to onboard new developers and make them productive.
 
-### The solution
+Tech stacks are complex these days, this is nothing...
+
+![](./overview.png)
+
+## The solution
 
 1. **Take Sensible Defaults**. We need a standard for a big range of app development projects so it's less needed to think about the stack every project.
 
 2. **Mapping out the whole process**. We need a single place we can go to where you can find an overview of everything needed to launch a succesful software product.
 
 3. **Smart Codebase** Codebase Introspection and Automatic Documentation Generation would be a big help in decreasing chronic technical debt and maximising learnability.
+
+## The Core TypeRepo Philosophy
+
+- Codebase introspection (Documentation generation)
+- Full-stack code-sharing (full-stack auto-completion using Typescript)
+- Maximise learnability, minimise tech debt, simplify onboarding
+- Decentralised, Open Source, Automatic
